--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <title>Document</title>
+    <title>Froggy-Rick</title>
   </head>
   <body>
     <div class="game-container">
